@@ -1,3 +1,8 @@
+2010-06-23  Patrice Dumas  <pertusus@free.fr>
+
+	* texi2html.pl: add variable substitution in htmlxref.cnf. Karl
+	idea.
+
 2010-06-22  Patrice Dumas  <pertusus@free.fr>
 
 	* texi2html.pl: format the key of index entries as late as possible
